--- a/melhor_tarde.html
+++ b/melhor_tarde.html
@@ -82,7 +82,7 @@ function drop(ev) {
 }
 </script>
 	
-    <title>Heroic Features - Start Bootstrap Template</title>
+    <title>Melhor da Tarde</title>
 
     <!-- Bootstrap core CSS -->
 <!-- Latest compiled and minified CSS -->
